BusOne/src/objects/Call2_vod__c.object
<CustomObject>
    <fields>
        <fullName>Location_Services_Status_vod__c</fullName>
        <description>Indicates the state of location services at the time a signature was  captured.

Enabled_vod – location services are turned on and the system is able to get the user’s location.
Disabled_vod – location services are turned off.
No_Connection_vod – no network connection.</description>
        <label>Location Services Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enabled_vod</fullName>
                </value>
                <value>
                    <fullName>Disabled_vod</fullName>
                </value>
                <value>
                    <fullName>No_Connection_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_vod__c</fullName>
        <description>Text field to note the location of the call. There is no special processing on this field.</description>
        <label>Location</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Discussions_vod__c</fullName>
        <description>Used to display the list of Products discussed on a Medical Interaction. Product names are delimited by double-spaces and alphabetical from left to right. This field does not control processing.</description>
        <label>Medical Discussions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Medical Event associated to the Call.</description>
        <label>Medical Event</label>
        <referenceTo>Medical_Event_vod__c</referenceTo>
        <relationshipLabel>Calls</relationshipLabel>
        <relationshipName>Call2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medical_Inquiry_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to associate a call report to a Medical Inquiry.</description>
        <label>Medical Inquiry</label>
        <referenceTo>Medical_Inquiry_vod__c</referenceTo>
        <relationshipLabel>Calls</relationshipLabel>
        <relationshipName>Calls_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Created_Datetime_vod__c</fullName>
        <description>Date and time the Call was created on the mobile device.</description>
        <label>Mobile Created Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_Last_Modified_Datetime_vod__c</fullName>
        <description>Date and time the Call was last saved or submitted on the mobile device.</description>
        <label>Mobile Last Modified Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Call_Notes_vod__c</fullName>
        <description>Free text area to store next call notes.  In call scheduling, Pre call notes are populated from the next-call notes of the last call that the user did on this account.  So, Next-Call notes become the pre-call notes for the next call by a same user on the same account.</description>
        <label>Next Call Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_Disbursement_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The No_Disbursement_vod field is used by the Call2_vod Trigger that creates Disbursement Sample Transactions. If this field is set to True, then the Sample Transactions will not be created by the Trigger. This can be utilized when loading historical call data when the intention is to not recreate the corresponding Disbursement Sample Transactions.</description>
        <label>No Disbursement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Address_Id_vod__c</fullName>
        <description>The Id of the Parent Address that was used when the Call was created; the text value of the Parent_Address_vod field.</description>
        <label>Parent Address Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Address_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to address associated with this call. When data loading historical data, this field is not required and it will generally be easier to use the Address text field on call.</description>
        <label>Parent Address</label>
        <referenceTo>Address_vod__c</referenceTo>
        <relationshipLabel>Calls</relationshipLabel>
        <relationshipName>Call2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Call_Mobile_ID_vod__c</fullName>
        <description>Mobile ID of the parent call object</description>
        <label>Parent Call Mobile ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Call_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this call record is part of a larger group call, this field is used to provide a link to that call.</description>
        <label>Parent Call</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Calls (Parent Call)</relationshipLabel>
        <relationshipName>Call2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_Call_Notes_vod__c</fullName>
        <description>Free text area to store pre-call notes.  Pre call notes are populated from the next-call notes of that last call that the user did on this account.  So, Next-Call notes become the pre-call notes for the next call by a same user on the same account.</description>
        <label>Pre-Call Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Presentations_vod__c</fullName>
        <description>Comma separated list of presentations for this call.</description>
        <label>Presentations</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Priority_1_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>First product to be discussed during the call. This is the suggested priority – actual discussion order can be modified during the call.  Product is loaded from Call Cycle Entry record.</description>
        <label>Product Priority 1</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Product Priority 1</relationshipLabel>
        <relationshipName>Product_Priority_1_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Priority_2_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Second product to be discussed during the call. This is the suggested priority – actual discussion order can be modified during the call.  Product is loaded from Call Cycle Entry record.</description>
        <label>Product Priority 2</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Product Priority 2</relationshipLabel>
        <relationshipName>Product_Priority_2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Priority_3_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Third product to be discussed during the call. This is the suggested priority – actual discussion order can be modified during the call.  Product is loaded from Call Cycle Entry record</description>
        <label>Product Priority 3</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Product Priority 3</relationshipLabel>
        <relationshipName>Product_Priority_3_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_vod__c</fullName>
        <description>System field used to store metadata about the call report. When data loading, this can be ignored.</description>
        <label>Property</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receipt_Email_vod__c</fullName>
        <description>Email address used when sending an Approved Email Receipt</description>
        <label>Receipt Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Remote_Meeting_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When populated, designates the Call as a Remote Meeting.</description>
        <label>Remote Meeting</label>
        <referenceTo>Remote_Meeting_vod__c</referenceTo>
        <relationshipLabel>Calls</relationshipLabel>
        <relationshipName>Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Receipt_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark true to if a receipt was requested for a disbursement.</description>
        <label>Request Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salutation_vod__c</fullName>
        <description>The salutation of the Account signing for a sample</description>
        <label>Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Card_Reason_vod__c</fullName>
        <description>The field is designed to capture the reason a Sample Card was used rather than electronic signature.</description>
        <label>Sample Card Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Laptop Unavailable</fullName>
                </value>
                <value>
                    <fullName>Application Unavailable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sample_Card_vod__c</fullName>
        <description>Sample card number if a disbursement was made with a sample card.</description>
        <label>Sample Card #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Limit_Transaction_Created_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field used to indicate that Sample Limit Transaction records have been created for required Call Sample records</description>
        <label>Sample Limit Transaction Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_Send_Card_vod__c</fullName>
        <description>Sample send card number if a disbursement was made with a sample send card.</description>
        <label>Sample Send Card #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_ASSMCA_vod__c</fullName>
        <description>The ASSMCA number corresponding to the ship to address.</description>
        <label>Ship ASSMCA #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Address_Line_1_vod__c</fullName>
        <description>The Ship Address Line 1 field stores the first line of the Ship to Address for a BRC Sample.  This field should not be displayed on the Page Layout.</description>
        <label>Ship Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Address_Line_2_vod__c</fullName>
        <description>The Ship Address Line 2 field stores the second line of the Ship to Address for a BRC Sample.  This field should not be displayed on the Page Layout.</description>
        <label>Ship Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_CDS_Expiration_Date_vod__c</fullName>
        <description>The expiration date of the CDS registration number for the ship to address.</description>
        <label>Ship CDS Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_CDS_vod__c</fullName>
        <description>The CDS registration number for the corresponding state of the ship to address.</description>
        <label>Ship CDS #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_City_vod__c</fullName>
        <description>The Ship City field stores the City of the Ship to Address for a BRC Sample.  This field should not be displayed on the Page Layout.</description>
        <label>Ship City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Country_vod__c</fullName>
        <description>The Ship Country field stores the Country of the Ship to Address for a BRC Sample.  This field should not be displayed on the Page Layout.</description>
        <label>Ship Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_DEA_Expiration_Date_vod__c</fullName>
        <description>The expiration date of the DEA number corresponding to the ship to address.</description>
        <label>Ship DEA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_DEA_vod__c</fullName>
        <description>The DEA number corresponding to the ship to address.</description>
        <label>Ship DEA #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_License_Expiration_Date_vod__c</fullName>
        <description>The Ship License Expiration Date field stores the Physician&apos;s State License Expiration Date that signed for Samples.  This field should not be added to the Page Layout.</description>
        <label>Ship License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_License_Status_vod__c</fullName>
        <description>The Ship License Status field stores the current Status of the Physician&apos;s State License at the time the Signature was captured for Samples.  This field should not be added the page layout.</description>
        <label>Ship License Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_License_vod__c</fullName>
        <description>The Ship License # field stores the State License # for the Physician signing the BRC.</description>
        <label>Ship License #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Location_Id_vod__c</fullName>
        <description>The textual ID of the Child Account value maintained in the Ship_To_Location_vod field.</description>
        <label>Ship Location Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Location_vod__c</fullName>
        <description>The Ship Location field stores the Business Account location for a BRC Sample. This field should not be displayed on the Page Layout.</description>
        <label>Ship Location</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_State_Distributor_Exp_Date_vod__c</fullName>
        <description>The expiration date of the State Distributor number corresponding to the Business ship to address.</description>
        <label>Ship State Distributor Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_State_Distributor_vod__c</fullName>
        <description>The State Distributor number corresponding to the Business ship to address.</description>
        <label>Ship State Distributor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_State_vod__c</fullName>
        <description>The Ship State field stores the State of the Ship to Address for a BRC Sample.  This field should not be displayed on the Page Layout.</description>
        <label>Ship State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_Text_vod__c</fullName>
        <description>The Ship to Address Formula field corresponds to a formatted version of the Ship to Address fields.  This value is leveraged in the case that the referenced Ship to Address has been deleted.  This field should not be added to a Page Layout.</description>
        <formula>Ship_Address_Line_1_vod__c    &amp; IF(LEN(Ship_Address_Line_2_vod__c) &gt; 0,   &quot;, &quot; &amp;  Ship_Address_Line_2_vod__c, &quot;&quot;)  &amp; IF(LEN(Ship_City_vod__c) &gt; 0,   &quot;, &quot; &amp;  Ship_City_vod__c, &quot;&quot;)  &amp; IF(LEN(Ship_State_vod__c) &gt; 0,   &quot;, &quot; &amp;  Ship_State_vod__c, &quot;&quot;)   &amp; IF(LEN(Ship_Zip_vod__c) &gt; 0,   &quot; &quot; &amp;  Ship_Zip_vod__c, &quot;&quot;)  &amp; IF(LEN(Ship_Country_vod__c) &gt; 0,   &quot; &quot; &amp;  Ship_Country_vod__c, &quot;&quot;)</formula>
        <label>Ship To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Ship to Address Lookup field corresponds to the selected Address record where BRC Samples will be shipped.  This field should not be added to a Page Layout.</description>
        <label>Ship To Address</label>
        <referenceTo>Address_vod__c</referenceTo>
        <relationshipLabel>Calls (Ship To Address)</relationshipLabel>
        <relationshipName>Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_Location_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Ship to Location Lookup field corresponds to the selected Business Account record where BRC Samples will be shipped. This field should not be added to a Page Layout.</description>
        <label>Ship To Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Calls (Ship To Location)</relationshipLabel>
        <relationshipName>Calls1_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_Zip_4_vod__c</fullName>
        <description>The Ship Zip 4 field stores the Zip Code 4 of the Ship to Address for a BRC Sample. This field should not be displayed on the Page Layout.</description>
        <label>Ship Zip 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Zip_vod__c</fullName>
        <description>The Ship Zip field stores theZip Code/Postal Code of the Ship to Address for a BRC Sample.  This field should not be displayed on the Page Layout.</description>
        <label>Ship Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Date_vod__c</fullName>
        <description>Date and time of the captured signature for a disbursement. This value is copied in to the sample transaction object via a trigger. It is maintained on call header for synchronization purposes.</description>
        <label>Signature Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signature_Location_Latitude_vod__c</fullName>
        <description>Stores the latitude coordinate of the location where the signature was captured.</description>
        <label>Signature Location Latitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signature_Location_Longitude_vod__c</fullName>
        <description>Stores the longitude coordinate of the location where the signature was captured.</description>
        <label>Signature Location Longitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signature_Page_Display_Name_vod__c</fullName>
        <description>The value of the Account.Signature_Page_Display_Name_vod at the time of Signature Capture.</description>
        <label>Signature Page Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Page_Image_vod__c</fullName>
        <description>The string displayed in the Signature Page Image picklist</description>
        <label>Signature Page Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Timestamp_vod__c</fullName>
        <description>Device up-time in seconds, at the time the signature was captured.</description>
        <label>Signature Timestamp</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signature_on_Sync_vod__c</fullName>
        <description>Indicates the presence of a practitioner signature on sync of a saved call to determine ability of practitioner to re-sign for samples with sample limits</description>
        <formula>IF( ISBLANK( Signature_Date_vod__c ) || ISNULL( Signature_Date_vod__c ) , &quot;No_vod&quot;, &quot;Yes_vod&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signature on Sync</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_vod__c</fullName>
        <description>Encoded signature captured during disbursement.  Encoded using base64. This value is copied in to the sample transaction object via a trigger. It is maintained on call header for synchronization purposes.</description>
        <label>Signature</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Significant_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes a significant event.</description>
        <label>Significant Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Distributor_Expiration_Date_vod__c</fullName>
        <description>State Distributor license expiration date corresponding to the Business ship to address</description>
        <label>State Distributor Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Distributor_vod__c</fullName>
        <description>State Distributor License Number for the corresponding Business Address.</description>
        <label>State Distributor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_vod__c</fullName>
        <description>State of the Call Address.  This field should not be displayed on the Page Layout..</description>
        <label>State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status of the call -- Planned, Saved or Submitted. Use the translation workbench to change the display values.  The triggers on call look at this field to see whether the call is locked (submitted). This value is set for the user when the Save or Submit button is pressed.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted_vod</fullName>
                </value>
                <value>
                    <fullName>Planned_vod</fullName>
                </value>
                <value>
                    <fullName>Saved_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_vod__c</fullName>
        <description>Subject of the call. This is purely an optional text field with no special processing.</description>
        <label>Subject</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_Location_Latitude_vod__c</fullName>
        <description>Stores the latitude coordinate of the location where the submit button is clicked</description>
        <inlineHelpText>Stores the latitude coordinate of the location where the submit button is clicked</inlineHelpText>
        <label>Submit Location Latitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submit_Location_Longitude_vod__c</fullName>
        <description>Stores the longitude coordinate of the location where the submit button is clicked</description>
        <inlineHelpText>Stores the longitude coordinate of the location where the submit button is clicked</inlineHelpText>
        <label>Submit Location Longitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submit_Location_Services_Status_vod__c</fullName>
        <description>Indicates the state of location services at the time the submit button was clicked.
Enabled_vod - location services are turned on and the system is able to get the user&apos;s location
Disabled_vod - location services are turned off
No_connection_vod - no network connection</description>
        <label>Submit Location Services Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enabled_vod</fullName>
                </value>
                <value>
                    <fullName>Disabled_vod</fullName>
                </value>
                <value>
                    <fullName>No_connection_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_Timestamp_vod__c</fullName>
        <description>Device up-time in seconds, at the time the submit button was clicked.</description>
        <inlineHelpText>Device up-time in seconds, at the time the submit button was clicked.</inlineHelpText>
        <label>Submit Timestamp</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submitted_By_Mobile_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the call was submitted from a mobile transaction.</description>
        <label>Submitted By Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suggestion_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates Call Report to Suggestion</description>
        <label>Suggestion</label>
        <referenceTo>Suggestion_vod__c</referenceTo>
        <relationshipLabel>Calls</relationshipLabel>
        <relationshipName>Calls_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supervising_Physician_Credential_vod__c</fullName>
        <description>The credentials of the Supervising Physician at the time of the Call.</description>
        <label>Supervising Physician Credential</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervising_Physician_License_vod__c</fullName>
        <description>The state license number of the Supervising Physician at the time of the Call.</description>
        <label>Supervising Physician License</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervising_Physician_Name_vod__c</fullName>
        <description>The name of the Supervising Physician at the time of the Call.</description>
        <label>Supervising Physician Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervising_Physician_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Supervising Physician if the Call is for a midlevel practitioner in a state where the collaborative relationship with the supervising physician is required to be captured on the call record.</description>
        <label>Supervising Physician</label>
        <referenceTo>Account_Authorization_vod__c</referenceTo>
        <relationshipLabel>Calls</relationshipLabel>
        <relationshipName>Calls_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_vod__c</fullName>
        <description>The Territory of the User at the time of the Account Call.  If the User and Account are in more than one territory, it uses the first territory from the User that matches a Territory of the Account.  If no match between User and Rep, do not populate the Territory on the Call</description>
        <label>Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Attendees_Count_vod__c</fullName>
        <description>Holds the number of attendees who are on this call that should be tied to the expense amount. This number represents everyone, including non-HCPs</description>
        <label>Total Call Attendee Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unlock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is updated to true on a submitted call report, the call status will changed to &quot;Saved&quot; by the call trigger. Note that the value &quot;True&quot; is never actually saved in the unlock field. It is simply a way to unlock submitted calls. Normally only administrators will have field level security to the Unlock field.</description>
        <label>Unlock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the user (if any) that the call is associated with. This does not mean the user who submitted the call, but means a user who has been added on the attendee list.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Veeva_Remote_Meeting_Id_vod__c</fullName>
        <description>Unique meeting identifier for a remote meeting participant</description>
        <inlineHelpText>Unique meeting identifier for a remote meeting participant</inlineHelpText>
        <label>Veeva Remote Meeting Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_4_vod__c</fullName>
        <description>Zip + 4 of the Call Address.  This field should not be displayed on the Page Layout..</description>
        <label>Zip_4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_vod__c</fullName>
        <description>Zip Code of the Call Address.  This field should not be displayed on the Page Layout..</description>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zvod_Account_Account_Identifier_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker Field used to place the Account Identifier on layout</description>
        <label>zvod_Account.Account_Identifier_vod__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Account_Call_Reminder_vod_c_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The contents of the Call_Reminder_vod on the parent account will be displayed here.</description>
        <label>zvod_Account.Call_Reminder_vod__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Account_Credentials_vod_c_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place Account Credentials control on layout.</description>
        <label>zvod_Account.Credentials_vod__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Account_Preferred_Name_vod_c_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place Preferred Name control on layout.</description>
        <label>zvod_Account.Preferred_Name_vod__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Account_Primary_Parent_vod_c_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker Field used to place the Account Primary Parent on layout</description>
        <label>zvod_Account.Primary_Parent_vod__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Account_Sample_Status_vod_c_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place sample status indicator on layout.</description>
        <label>zvod_Address_vod__c.Sample_Status_vod__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Add_Expense_Receipt_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to add expense receipts</description>
        <label>Add Expense Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Address_Sample_Send_Status_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place valid address indicator for sample send status on layout</description>
        <label>zvod_Address.Sample_Send_Status_vod__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Address_vod_c_DEA_Status_vod_c_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place DEA sample status indicator on layout.</description>
        <label>zvod_Address_vod__c.DEA_Status_vod__c</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>